fix extra space under images

--- a/custom.styl
+++ b/custom.styl
@@ -187,7 +187,7 @@ body
   margin-left 10px
   
 .event-img
-  max-height 275px
+  max-height 254px
   overflow hidden
 
 .event-img img
